--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="56dp"
-    tools:context=".MainActivity">
+    tools:context=".Login_main">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRVCourse"
